--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,33 +23,37 @@
 
     <article class="card">
 
-      
-      <div class="card-content">
-        
-        <img src="/images/illustration-hero.svg" alt="illustration-hero">
+      <img src="/images/illustration-hero.svg" alt="illustration-hero">
 
-        <div class="text">
+      <div class="text">
 
-          <h3>Order Summary</h3>
-          <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        <h3>Order Summary</h3>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-        </div>
+      </div>
 
-        <div class="icon">
+      <div class="icon-text">
 
-          <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#DFE6FB"/><path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"/></g></svg>
-          <p>Annual Plan</p>
-          <p>$59.99/year</p>
-          <a href="#">Change</a>
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#DFE6FB"/><path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"/></g></svg>
 
-        </div>
+            <div>
+              <h5>Annual Plan</h5>
+              <p>$59.99/year</p>
+  
+            </div>
 
-        <div class="button">
+          </div>
 
-          <a href="#">Proced to Payment</a>
-          <a href="#">Cancel Order</a>
+        <a href="#">Change</a>
 
-        </div>
+      </div>
+
+      <div class="buttons">
+
+        <a href="#" class="boton-pago">Proced to Payment</a>
+
+        <a href="#" class="boton-cancelar">Cancel Order</a>
 
       </div>
 
