Proyecto casi terminado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <article class="card">
 
-      <img src="../images/illustration-hero.svg" alt="illustration-hero">
+      <img src="/images/illustration-hero.svg" alt="illustration-hero">
 
       <div class="text">
 
